Resolves #11 It's kind of strange because it seems that it was only happening on mobile safari. Then again, technically *I only saw it* on mobile safari

--- a/sass/curekids.scss
+++ b/sass/curekids.scss
@@ -1284,9 +1284,10 @@ a.ck-profile-get-well-inline-media {
 
 	.link-form-more-info {
 		display: block;
-		max-width: 115px;
+		max-width: 118px;
 		margin: 0 auto 25px;
 		font-size: 12px;
+		text-align: center;
 	}
 	
 	input[type="text"]::-webkit-input-placeholder,
